<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="32dp"
    android:background="#C0C0C0"
    android:backgroundTint="#045D5D"
    android:gravity="center|top">
    <TextView
        android:id="@+id/totalTimeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/select_workout_type"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="8dp" />
    <Spinner
        android:id="@+id/workSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:id="@+id/totalWorkoutsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_day"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="8dp"
        />

    <Spinner
        android:id="@+id/daySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/select_day_of_the_week" />

    <EditText
        android:id="@+id/durationTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_duration_in_minutes"
        android:inputType="number" />

    <TextView
        android:id="@+id/difficultyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_difficulty"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="8dp"
        />
    <RadioGroup
        android:id="@+id/difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/easy"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:textSize="18sp"

            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/hard" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">
        <CheckBox
            android:id="@+id/cboxCalorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calorie_calculation"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/cboxSaveWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:text="@string/save_workout" />

    </LinearLayout>
    <TextView
        android:id="@+id/caloriesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_burned_0"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_challenge"
        android:backgroundTint="#151B54"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:shadowColor="@color/design_default_color_background"
        android:scrollbarStyle="insideInset"
        android:textColor="@android:color/white" />

</LinearLayout>
