<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#581845"
    tools:context=".Activity3">

    <TextView
        android:id="@+id/selectDayTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_day"
        android:textSize="20sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/totalWorkoutsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_workouts_completed_0"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectDayTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/totalTimeTxt"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/total_workout_time_0_mins"
        android:textSize="20sp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalWorkoutsTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3"/>

    <ListView
        android:id="@+id/ListView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:dividerHeight="1dp"
        android:padding="8dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalTimeTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clearBtn" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ListView"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#900C3F"
        android:scrollbarStyle="insideInset"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset"
        android:text="@string/back"

        android:backgroundTint="#900C3F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clearBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/thankYouTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ramadan"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/ramadan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_ramadan_abo_syam"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
