<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffebcd"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:src="@drawable/workout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"

        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/person" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"

        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/lock" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/passWord"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/pass_word" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/login"
            android:contentDescription="@string/login"
            android:background="@null"
            android:scaleType="centerInside"
            />

    </LinearLayout>

</LinearLayout>
